--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "clean": true,
     "dts": true
   },
+  "prettier": "@pengzhanbo/prettier-config",
   "dependencies": {
     "vue": "^3.2.40"
   },
   "devDependencies": {
-    "@pengzhanbo/eslint-config": "^0.1.2",
-    "@pengzhanbo/prettier-config": "^0.1.3",
+    "@pengzhanbo/eslint-config": "^0.1.4",
+    "@pengzhanbo/prettier-config": "^0.1.4",
     "@types/node": "^18.7.23",
     "@vitejs/plugin-vue": "^3.1.0",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
